--- a/templates/caddy.service
+++ b/templates/caddy.service
@@ -13,7 +13,7 @@ Wants=network-online.target systemd-networkd-wait-online.service
 {% endif %}
 
 [Service]
-Restart={{ caddy_systemd_restart }}
+;Restart={{ caddy_systemd_restart }}
 StartLimitInterval={{ caddy_systemd_restart_startlimitinterval }}
 StartLimitBurst= {{ caddy_systemd_restart_startlimitburst }}
 
