Add more permission + logs

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,4 +30,6 @@ caddy_config: |
     gzip
     # tls email@example.com
     root /var/www
+    log /var/log/access.log
+    errors /var/log/errors.log
   }
